Setting up base

--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
-    <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-    <script src="code.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Chatler</title>
+    </head>
+    <body>
+
+        <div class="logo"></div>
+        <header></header>
+        <nav></nav>
+        <aside></aside>
+        <main>
+            <div class="head"></div>
+            <div class="content"></div>
+            <div class="chat"></div>
+        </main>
+        <footer>
+            <script src="code.js"></script>
+        </footer>
+    </body>
 </html>
